# RPIPicoWeatherStation

./: .gitmodules  CMakeLists.txt  PicoW_WSClient.cmake  README.md
PCB/: README.md
PCB/WeatherStationPCB/: WeatherStationPCB.kicad_pcb  WeatherStationPCB.kicad_prl  WeatherStationPCB.kicad_pro  WeatherStationPCB.kicad_sch  fp-info-cache
exp/Battery/: CMakeLists.txt
exp/Battery/src/: CMakeLists.txt  main.cpp  main.old
exp/DeepSleep/: CMakeLists.txt
exp/DeepSleep/src/: CMakeLists.txt  main.cpp
exp/DeepSleepInt/: CMakeLists.txt
exp/DeepSleepInt/src/: CMakeLists.txt  main.cpp
exp/I2CScan/: CMakeLists.txt
exp/I2CScan/src/: CMakeLists.txt  bus_scan.c
exp/RGB/: CMakeLists.txt
exp/RGB/src/: CMakeLists.txt  main.cpp
exp/SEN0500/: CMakeLists.txt
exp/SEN0500/src/: CMakeLists.txt  Sen0500.cpp  Sen0500.h  main-serial.cpp  main.cpp
exp/UartProbe/: CMakeLists.txt
exp/UartProbe/src/: CMakeLists.txt  main.cpp
exp/Wind/: CMakeLists.txt
exp/Wind/src/: CMakeLists.txt  main.cpp
src/: AHT10Status.cpp  AHT10Status.h  Anemometer.cpp  Anemometer.h  AnemometerPWM.cpp  AnemometerPWM.h  CMakeLists.txt  ConfigRequest.cpp  ConfigRequest.h  DeepSleepRTOS.cpp  DeepSleepRTOS.h  PayloadPart.cpp  PayloadPart.h  PicoStatus.cpp  PicoStatus.h  PowerCtr.cpp  PowerCtr.h  RTCStatus.cpp  RTCStatus.h  Rain.cpp  Rain.h  SDLog.cpp  SDLog.h  Sen0500.cpp  Sen0500.h  Sen0500Status.cpp  Sen0500Status.h  StatusAgent.cpp  StatusAgent.h  VoltMeter.cpp  VoltMeter.h  WeatherStation.cpp  WeatherStation.h  WeatherStationPayload.cpp  WeatherStationPayload.h  WindVane.cpp  WindVane.h  config.h  files.cmake  hw_config.c  (+1 more)
test/: CMakeLists.txt  UtestPlatform.cpp  testAHT10.cpp  testAnem.cpp  testConfig.h  testCtr.cpp  testDS3231.cpp  testPayload.cpp  testPico.cpp  testRGB.cpp  testRain.cpp  testSDLog.cpp  testSen500.cpp  testVane.cpp  test_main.cpp
